# booking

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/booking/application/: commands.py  handlers.py  unit_of_work.py
src/booking/domain/: events.py  factory.py  model.py  repository.py  services.py
src/booking/entrypoints/: fastapi_app.py
src/booking/infrastructure/: repositories.py  uow.py
src/booking/infrastructure/database/: db.py  model.py
tests/: conftest.py  test_cancel_reservation.py  test_change_timeslot_reservation.py  test_completed_reservation.py  test_create_reservation.py
