[project]
name = "booking"
version = "0.1.0"
description = ""
authors = [
    {name = "Vera Adzhieva",email = "vera.adzhieva3003@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.0,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
